edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

import "google/protobuf/timestamp.proto";
import "wayplatform/connect/tachograph/dd/v1/activity_change_info.proto";
import "wayplatform/connect/tachograph/dd/v1/place_record_g2.proto";
import "wayplatform/connect/tachograph/dd/v1/specific_condition_record.proto";
import "wayplatform/connect/tachograph/dd/v1/vu_card_iw_record_g2.proto";
import "wayplatform/connect/tachograph/dd/v1/vu_gnss_ad_record.proto";
import "wayplatform/connect/tachograph/security/v1/authentication.proto";

// Activities data for Generation 2, Version 1 VU downloads.
//
// See Appendix 7, Section 2.2.6.3 (TREP 22 Hex).
//
// Gen2 V1 uses RecordArray structures and includes GNSS accumulated driving records.
//
// ASN.1 Definition:
//
//     VuActivitiesSecondGen ::= SEQUENCE {
//         timeReal TimeReal,
//         odometerValueMidnight OdometerValueMidnight,
//         vuCardIWRecordArray VuCardIWRecordArray,
//         vuActivityDailyRecordArray VuActivityDailyRecordArray,
//         vuPlaceDailyWorkPeriodRecordArray VuPlaceDailyWorkPeriodRecordArray,
//         vuGNSSADRecordArray VuGNSSADRecordArray,
//         vuSpecificConditionRecordArray VuSpecificConditionRecordArray,
//         signatureRecordArray SignatureRecordArray
//     }
message ActivitiesGen2V1 {
  // Date of the downloaded day.
  //
  // See Data Dictionary, Section 2.162, `TimeReal`.
  google.protobuf.Timestamp date_of_day = 1;

  // Odometer value at midnight in kilometers.
  //
  // See Data Dictionary, Section 2.114, `OdometerValueMidnight`.
  int32 odometer_midnight_km = 2;

  // Card insertion and withdrawal data.
  //
  // See Data Dictionary, Section 2.178, `VuCardIWRecordArray`.
  repeated dd.v1.VuCardIWRecordG2 card_iw_data = 3;

  // Driver activity changes.
  //
  // See Data Dictionary, Section 2.171, `VuActivityDailyRecordArray`.
  repeated dd.v1.ActivityChangeInfo activity_changes = 4;

  // Daily work period place entries.
  //
  // See Data Dictionary, Section 2.220, `VuPlaceDailyWorkPeriodRecordArray`.
  repeated dd.v1.PlaceRecordG2 places = 5;

  // GNSS positions recorded at 3-hour accumulated driving time intervals.
  //
  // See Data Dictionary, Section 2.204, `VuGNSSADRecordArray`.
  repeated dd.v1.VuGNSSADRecord gnss_accumulated_driving = 6;

  // Specific conditions data.
  //
  // See Data Dictionary, Section 2.228, `VuSpecificConditionRecordArray`.
  repeated dd.v1.SpecificConditionRecord specific_conditions = 7;

  // Signature for Gen2 data (ECC, variable length in SignatureRecordArray).
  //
  // See Data Dictionary, Section 2.149, `Signature`.
  bytes signature = 8;

  // The raw, unparsed binary data of the complete Activities transfer value.
  // This field is preserved for data fidelity and lossless round-trips.
  // It includes all data structures and the embedded signature.
  bytes raw_data = 9;

  // Result of cryptographic signature authentication for this transfer.
  // Present when signature verification has been performed.
  tachograph.security.v1.Authentication authentication = 99;
}

